<resources>
    <string name="app_name">SmartPrinter</string>
    <string name="title_activity_cookbook">菜单</string>
    <string name="action_settings">Setting</string>
    <string name="settings">设置</string>
    <string name="title_activity_login">登录</string>

    <!-- Strings related to login -->
    <string name="prompt_user">账号</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_ip">IP</string>
    <string name="prompt_port">Port</string>
    <string name="action_sign_in">登录</string>
    <string name="register">注册</string>
    <string name="action_sign_in_short">登录</string>
    <string name="error_invalid_user">用户名无效</string>
    <string name="error_invalid_email">Email地址无效</string>
    <string name="error_invalid_password">密码过短</string>
    <string name="error_field_required">该项为必填项</string>
    <string name="title_activity_print">打印预览</string>
    <string name="no_account">没有账号?</string>

    <string name="ok">确定</string>
    <string name="printnow">正在打印订单</string>
    <string name="printfinish">打印完成订单</string>
    <string name="ordernum">订单编号</string>
    <string name="orderstatus">状态</string>
    <string name="back">返回</string>
    <string name="printstatus">打印状态</string>
    <string name="title_activity_order_status">打印状态</string>
    <string name="title_activity_server_setting">服务器设置</string>
    <string name="blue_test">蓝牙测试</string>
    <string name="wifi_test">Wi-Fi测试</string>
    <string name="title_activity_blue_printer_list">BluePrinterListActivity</string>

    <!--  WifiDeviceListActivity -->
    <string name="scanning">正在查找设备…</string>
    <string name="select_device">选择设备</string>
    <string name="none_paired">没有已配对的设备</string>
    <string name="none_found">没有找到设备</string>
    <string name="title_paired_devices">已配对的设备</string>
    <string name="title_other_devices">其他可用的设备</string>
    <string name="button_scan">查找设备</string>

    <!--  BluetoothChat -->
    <string name="send">发送</string>
    <string name="not_connected">未连接</string>
    <string name="bt_not_enabled_leaving">蓝牙不可用. 退出蓝牙下单.</string>
    <string name="title_connecting">连接中…</string>
    <string name="title_connected_to">连接到 %1$s</string>
    <string name="title_not_connected">@string/not_connected</string>
    <string name="connect_lost">连接断开</string>
    <string name="connect_fail">连接失败</string>
    <string name="disconnect">断开连接</string>

    <string name="order_finished">打印完成</string>
    <string name="order_waiting">等待打印</string>

    <string name="connect">连接</string>

    <!-- Options Menu -->
    <string name="discoverable">设置为可探测</string>

    <!--zjk-->
    <string name="get_order_auto">自动获取所有订单数据</string>
    <string name="print_status">监控打印状态</string>
    <string name="shopkeeper_name">店主名字</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="store_name">商店名</string>
    <string name="store_address">商家地址</string>
    <string name="stroe_phone">商家电话</string>
    <string name="print_id">打印机id</string>
    <string name="add_print_id">添加打印机id</string>
    <string name="please_input_id">请输入打印机的id</string>
    <string name="sure">确定</string>
    <string name="cancel">取消</string>
    <string name="input_something">你输入的内容为空，请重新输入！</string>
    <string name="somethingnull">当前页面有信息为空，请输入完后再注册！</string>
    <string name="register_success">注册成功！</string>
    <string name="register_fail">注册失败！请稍后再试</string>
    <string name="oper">操作</string>
    <string name="empty_car">清空购物车</string>
    <string name="login_fail">登录失败</string>
    <string name="login_success">登陆成功</string>
    <string name="noneorder">暂无订单数据</string>
    <string name="place_order_success">发送打印数据成功</string>
    <string name="place_order_fail">发送打印数据失败</string>
    <string name="empty_view">您的购物车为空，快去看看商品吧！</string>
    <string name="place_order">下单</string>
    <string name="get_fail">获取数据失败</string>
    <string name="printers_status">监控打印机的状态</string>
    <string name="printer_id">打印机编号</string>
    <string name="printer_status">打印机状态</string>
    <string name="net_problem">服务器有点问题，请稍后重试</string>
    <string name="company_name">公司名</string>
    <string name="expect_time">期望到达时间</string>
    <string name="order_remark">备注</string>
    <string name="order_mealFee">餐盒费</string>
    <string name="order_disFee">配送费</string>
    <string name="order_pre_amount">优惠额</string>
    <string name="user_name">顾客姓名</string>
    <string name="user_address">送餐地址</string>
    <string name="user_telephone">顾客电话</string>
    <string name="become_printer">生成打印预览</string>
    <string name="input_error">联系方式输入有误，请查证后生成！</string>
    <string name="input_error_1">内容输入有误，请查证后生成！</string>
    <string name="done_order">生成订单</string>
    <string name="direct_location_order">本地下单(免登录)</string>
    <string name="title_activity_local_print_preview">打印预览</string>
    <string name="input_advertisement">添加广告</string>
    <string name="input_url">URL(生成二维码)</string>
    <!--<string name="select_photo">选择图片</string>-->
    <string name="title_activity_chose_photo">选择logo</string>
    <string name="chose_bluetooth">选择连接设备</string>
    <string name="scroll_bottom">滚动到底部</string>
    <string name="clear_log">清空</string>
    <string name="add_logo">添加logo</string>
    <string name="title_activity_status">状态信息</string>
    <string name="title_activity_business_info">商家信息</string>
    <string name="url_qr_code">二维码</string>
    <string name="advertisement">广告</string>
    <string name="logo">logo</string>
    <string name="title_activity_edit_business_info">编辑信息</string>

    <string name="order_status">订单状态</string>
    <string name="error_add_logo">添加logo失败</string>
    <string name="order">下单</string>
    <string name="edit">编辑</string>

    <string name="print">打印</string>

    <string name="title_activity_local_status">状态信息</string>
    <string name="not_any_printer">没有已连接的打印机</string>
    <string name="printer_status_format">打印机名称：%1$s\n硬件地址：%2$s\n打印机状态：\n%3$s\n连接方式：%4$s\n</string>
    <string name="bluetooth">蓝牙</string>
    <string name="wifi">Wi-fi</string>
    <string name="title_activity_wifi_connect">连接Wifi</string>

    <string name="show_or_hide_log">显示/隐藏日志</string>

    <string name="auto_order_status_format">自动下单信息\n总数：%2$d;\n收到应答数:%1$d</string>
    <string name="title_select_device">@string/select_device</string>
    <string name="bluetooth_device">蓝牙设备</string>
    <string name="wifi_device">Wifi设备</string>
    <string name="send_to_file">发送到文件</string>

    <string name="loading_logo">正在处理LOGO…</string>
    <string name="printing">打印中…</string>
    <string name="loading">正在加载中…</string>
    <string name="order_lost">订单发送太快，已丢失！</string>
    <string name="unknown_device">未知设备</string>
    <string name="reselect_device">连接断开，请重新选择设备</string>
    <string name="not_select_device">还没有选择设备</string>
    <string name="corrected">重传</string>
</resources>
