<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.LauncherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/company_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="XX外卖"
            android:hint="@string/company_name"
            android:textColorLink="#3E50B4"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/expectTime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:text="马上"
            android:hint="@string/expect_time"
            android:textColorLink="#3E50B4"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/orderRemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/order_remark"
            android:textColorLink="#3E50B4"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/orderMealFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:hint="@string/order_mealFee"
            android:inputType="number"
            android:textColorLink="#3E50B4"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/orderDisFee"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="1"
            android:hint="@string/order_disFee"
            android:inputType="number"
            android:textColorLink="#3E50B4"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/orderPreAmount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="2"
            android:hint="@string/order_pre_amount"
            android:inputType="number"
            android:textColorLink="#3E50B4"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/userName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="张三"
            android:hint="@string/user_name"
            android:textColorLink="#3E50B4"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/userAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="广工"
            android:hint="@string/user_address"
            android:textColorLink="#3E50B4"
            android:textSize="14dp" />

        <EditText
            android:id="@+id/userTelephone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="13245678901"
            android:hint="@string/user_telephone"
            android:textColorLink="#3E50B4"
            android:textSize="14dp" />

        <Button
            android:id="@+id/done_print"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/btn_register"
            android:text="@string/become_printer"
            android:textColor="#FFFFFF"
            android:textSize="14dp" />
    </LinearLayout>
</ScrollView>