<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.LauncherActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/shopkeeper_name" />

        <EditText
            android:id="@+id/shopkeeper_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="#3E50B4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/account" />

        <EditText
            android:id="@+id/account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColorLink="#3E50B4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColorLink="#3E50B4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/store_name" />

        <EditText
            android:id="@+id/store_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="#3E50B4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/store_address" />

        <EditText
            android:id="@+id/store_address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="#3E50B4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/stroe_phone" />

        <EditText
            android:id="@+id/stroe_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:textColorLink="#3E50B4" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="15"
            android:text="@string/print_id" />

        <ListView
            android:id="@+id/print_id_list"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_weight="71"
            android:divider="#EDEDED"
            android:dividerHeight="0.1dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/add_printId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:clickable="true"
        android:drawableLeft="@drawable/add_print_id"
        android:onClick="onClick"
        android:paddingBottom="6dp"
        android:paddingTop="6dp"
        android:text="@string/add_print_id"
        android:textSize="18dp" />

    <Button
        android:id="@+id/register"
        style="@style/Base.Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/register"
        />
</LinearLayout>