<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:background="#FFFFFF"
    android:orientation="vertical">

    <EditText
        android:id="@+id/printerId"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:maxLines="1"
        android:inputType="number"
        android:hint="@string/please_input_id"
        android:textColorLink="#3E50B4"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/sure"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/btn_register"
            android:text="@string/sure"/>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="#FFFFFF"/>

        <Button
            android:id="@+id/cancle"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:background="@drawable/btn_register"
            android:text="@string/cancel"/>
    </LinearLayout>

</LinearLayout>