<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical"
              android:paddingBottom="@dimen/activity_vertical_margin"
              android:paddingLeft="@dimen/activity_horizontal_margin"
              android:paddingRight="@dimen/activity_horizontal_margin"
              android:paddingTop="@dimen/activity_vertical_margin"
              tools:context="com.qg.smartprinter.ui.ServerSettingActivity">

    <EditText
        android:id="@+id/ip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_ip"
        android:maxLines="1"
        android:singleLine="true"/>


    <EditText
        android:id="@+id/port"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_port"
        android:inputType="number"
        android:maxLines="1"
        android:singleLine="true"/>

    <EditText
        android:id="@+id/delay"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="Delay"
        android:inputType="datetime"
        android:maxLines="1"/>


    <Button
        android:id="@+id/ok"
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"/>

</LinearLayout>
