<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".localorder.selectdevice.SelectDeviceActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bluetooth_device"
        android:textSize="23sp"/>

    <FrameLayout
        android:id="@+id/bt_device"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <TextView
            android:id="@+id/bt_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/not_connected"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/connect_bt_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:onClick="onClick"
            android:text="@string/connect"/>

        <Button
            android:id="@+id/disconnect_bt_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:onClick="onClick"
            android:text="@string/disconnect"
            android:visibility="gone"/>
    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/wifi_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wifi_device"
        android:textSize="23sp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:padding="10dp">

        <TextView
            android:id="@+id/wifi_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/not_connected"
            android:textSize="17sp"/>

        <Button
            android:id="@+id/connect_wifi_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:onClick="onClick"
            android:text="@string/connect"/>

        <Button
            android:id="@+id/disconnect_wifi_btn"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            android:onClick="onClick"
            android:text="@string/disconnect"
            android:visibility="gone"
            />

    </FrameLayout>
</LinearLayout>
