<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="#EFEFEF"
        android:orientation="vertical">

        <TextView
            android:id="@+id/empty_car"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:drawableLeft="@drawable/delete"
            android:gravity="center_vertical"
            android:text="@string/empty_car"
            android:textSize="16dp"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/recyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="#F5F5F5" >
    </android.support.v7.widget.RecyclerView>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="46dp"
        android:background="#FCFCFC">

        <TextView
            android:id="@+id/price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="10"
            android:textColor="@color/common_red"/>

        <Button
            android:id="@+id/sure"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:background="@drawable/btn_shapr"
            android:text="@string/place_order"/>

        <Button
            android:id="@+id/cancle"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@id/sure"
            android:background="@drawable/btn_shapr"
            android:text="@string/cancel"/>
    </RelativeLayout>

</LinearLayout>