<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.qg.smartprinter.ui.EditBusinessInfoActivity"
    tools:showIn="@layout/activity_edit_business_info">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <FrameLayout
            android:id="@+id/logo_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center">

            <ImageView
                android:layout_margin="10dp"
                android:id="@+id/logo"
                style="@style/BusinessInfoLogo"
                />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:tint="@color/colorAccent"
                android:src="@drawable/ic_add_a_photo_black_24dp"/>

        </FrameLayout>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            style="@style/BusinessInfoImage"
            android:src="@drawable/ic_account_balance_black_24dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/store_name"
                style="@style/BusinessInfoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_name"
                />
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            style="@style/BusinessInfoImage"
            android:src="@drawable/ic_add_location_black_24dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/store_address"
                style="@style/BusinessInfoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/store_address"
                />
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            style="@style/BusinessInfoImage"
            android:src="@drawable/ic_phone_black_24dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/store_phone"
                style="@style/BusinessInfoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/stroe_phone"
                />
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            style="@style/BusinessInfoImage"
            android:src="@drawable/ic_format_quote_black_24dp"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/advertisement"
                style="@style/BusinessInfoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/advertisement"
                />
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <ImageView
            style="@style/BusinessInfoImage"
            android:src="@drawable/ic_qrcode1"
            />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/qr_code_text"
                style="@style/BusinessInfoEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/url_qr_code"
                />
        </android.support.design.widget.TextInputLayout>
    </FrameLayout>

</LinearLayout>